--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_core: ^1.12.0
   sms_autofill: ^2.2.0
   dio: ^4.0.4
-  equatable: ^2.0.3
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
