--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sms_autofill: ^2.2.0
   dio: ^4.0.4
   shared_preferences: ^2.0.13
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
