--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="asistencia.asistencia">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
    <application
         android:label="asistencia"
         android:name="${applicationName}"
